# dita_xml_parser

./: .pylintrc  README.md  config.py  pyproject.toml  requirements.txt
dita_xml_parser/: __init__.py  minimal.py  transformer.py  utils.py  validator.py
sample_data/: advanced_topic.xml  complex_topic.xml  insurance_manager.xml  sample_map.ditamap  sample_topic.xml  simple_concept.xml
tests/: test_advanced_topic.py  test_complex.py  test_config_toml.py  test_do_not_translate.py  test_edge_cases.py  test_full_workflow_complex_tags.py  test_insurance_manager.py  test_simple_integration.py  test_transformer.py
translated/: complex_topic.xml  sample_map.xml  sample_topic.xml  simple_concept.xml
